<resources>
    <string name="app_name">VC-Track</string>
    <string name="start">Start</string>
    <string name="write_something">Write a Message!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="serverAddress">server_address</string>
    <string name="serverPort">server_port</string>
    <string name="streamId">stream_id</string>
    <string name="roomId">room_id</string>
    <string name="settings_button_name">Settings</string>
    <string name="stream_mode">streaming_mode</string>
    <string name="send_image_button_name">Send Image</string>
    <string name="playing">Playing</string>
    <string name="data_channel_not_available">"Data channel is not available. Enable data channel in both Android and Server side and then restart Streaming</string>
    <string name="permissions_msg_to_open_settings">Permission required for this application,\n provide them by open settings</string>
    <string name="open_settings">Open Settings</string>
    <string name="per_cancel">Cancel</string>
    <string name="allow_later">Allow Later</string>
    <string name="per_allow_msg">Permission required for this application \nprovide them by clicking allow</string>
    <string name="allow">Allow</string>
    <string name="try_again">Try again</string>
    <string name="no_internet">No Internet Connection, please check the connection and try again!</string>
    <string name="please_wait">Please wait!</string>
    <string name="ready_to_join_msg">Ready to Join</string>
    <string name="end_the_call">Do you want to end call ?</string>
    <string name="join_now">Join now</string>
    <string name="participants">Participants</string>
    <string name="roDetails">RO Details</string>
    <string name="sound_device">Sound Device</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="recording">Start Recording</string>
    <string name="screen_share_info">People will see everything on your screen</string>
    <string name="start_sharing">Start sharing</string>
    <string name="screen_share_info_ongoing">You are sharing your screen</string>
    <string name="stop_sharing">Stop Sharing</string>
    <string name="disbaled_video_info">Your video has been disabled.\nDo you want to re-enable the video?</string>
    <string name="rejoin_to_room">You have been disconnected from the room.\nDo you want to rejoin?</string>
    <string name="rejoin">Rejoin</string>
    <string name="lost_internet_connection_info">Internet connection lost. \n\nPlease connect to a stable network.</string>
    <string name="you">" You "</string>
    <string name="settings_name" translatable="false">AppRTC Settings</string>
    <string name="disconnect_call">Disconnect Call</string>
    <string name="room_description">
        Please enter a room name. Room names are shared with everyone, so think
        of something unique and send it to a friend.
    </string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">No favorites</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
    </string>
    <string name="channel_error_title">Connection error</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="missing_stream_id">FATAL ERROR: Missing Stream id to connect to.</string>
    <string name="missing_stream_mode">FATAL ERROR: Missing Stream mode. Please specify publish, play or join.</string>
    <string name="camera2_texture_only_error">Camera2 only supports capturing to texture. Either disable Camera2 or enable capturing to texture in the options.</string>
    <string name="ok">OK</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="muted">Muted</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="toggle_mic">Toggle microphone on/off</string>
    <string name="action_settings">Settings</string>
    <string name="action_loopback">Loopback connection</string>
    <string name="connect_description">Connect to the room</string>
    <string name="add_favorite_description">Add favorite</string>
    <string name="format_description">%1$dx%2$d @ %3$d fps</string>
    <string name="missing_permissions_try_again">The application is missing permissions. It might not work correctly. Do you want to to try again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pref_room_key">room_preference</string>
    <string name="pref_room_list_key">room_list_preference</string>
    <string name="pref_videosettings_key">video_settings_key</string>
    <string name="pref_videosettings_title">WebRTC video settings.</string>
    <string name="pref_videocall_key">videocall_preference</string>
    <string name="pref_videocall_title">Video call.</string>
    <string name="pref_videocall_dlg">Enable video in a call.</string>
    <string name="pref_videocall_default">true</string>
    <string name="pref_screencapture_key">screencapture_preference</string>
    <string name="pref_screencapture_title">Use screencapture.</string>
    <string name="pref_screencapture_default">false</string>
    <string name="pref_camera2_key">camera2_preference</string>
    <string name="pref_camera2_title">Use Camera2.</string>
    <string name="pref_camera2_default">true</string>
    <string name="pref_camera2_not_supported">Not supported on this device.</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_resolution_dlg">Enter AppRTC local video resolution.</string>
    <string name="pref_resolution_default">Default</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Camera fps.</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_fps_default">Default</string>
    <string name="pref_capturequalityslider_key">capturequalityslider_preference</string>
    <string name="pref_capturequalityslider_title">Capture quality slider.</string>
    <string name="pref_capturequalityslider_dlg">Enable slider for changing capture quality.</string>
    <string name="pref_capturequalityslider_default">false</string>
    <string name="pref_maxvideobitrate_key">maxvideobitrate_preference</string>
    <string name="pref_maxvideobitrate_title">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_dlg">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_default">Default</string>
    <string name="pref_maxvideobitratevalue_key">maxvideobitratevalue_preference</string>
    <string name="pref_maxvideobitratevalue_title">Video encoder maximum bitrate.</string>
    <string name="pref_maxvideobitratevalue_dlg">Enter video encoder maximum bitrate in kbps.</string>
    <string name="pref_maxvideobitratevalue_default">1700</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec.</string>
    <string name="pref_videocodec_dlg">Select default video codec.</string>
    <string name="pref_videocodec_default">VP8</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_capturetotexture_key">capturetotexture_preference</string>
    <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
    <string name="pref_capturetotexture_dlg">Capture video to textures (if available).</string>
    <string name="pref_capturetotexture_default">true</string>
    <string name="pref_flexfec_key">flexfec_preference</string>
    <string name="pref_flexfec_title">Codec-agnostic Flexible FEC.</string>
    <string name="pref_flexfec_dlg">Enable FlexFEC.</string>
    <string name="pref_flexfec_default">false</string>
    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>
    <string name="pref_audiosettings_key">audio_settings_key</string>
    <string name="pref_audiosettings_title">WebRTC audio settings.</string>
    <string name="pref_startaudiobitrate_key">startaudiobitrate_preference</string>
    <string name="pref_startaudiobitrate_title">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_dlg">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_default">Default</string>
    <string name="pref_startaudiobitratevalue_key">startaudiobitratevalue_preference</string>
    <string name="pref_startaudiobitratevalue_title">Audio codec bitrate.</string>
    <string name="pref_startaudiobitratevalue_dlg">Enter audio codec bitrate in kbps.</string>
    <string name="pref_startaudiobitratevalue_default">32</string>
    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Default audio codec.</string>
    <string name="pref_audiocodec_dlg">Select default audio codec.</string>
    <string name="pref_audiocodec_default">OPUS</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing.</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_aecdump_key">aecdump_preference</string>
    <string name="pref_aecdump_title">Create aecdump.</string>
    <string name="pref_aecdump_dlg">Enable diagnostic audio recordings.</string>
    <string name="pref_aecdump_default">false</string>
    <string name="pref_enable_save_input_audio_to_file_key">enable_key</string>
    <string name="pref_enable_save_input_audio_to_file_title">Save input audio to file.</string>
    <string name="pref_enable_save_input_audio_to_file_dlg">Save input audio to file.</string>
    <string name="pref_enable_save_input_audio_to_file_default">false</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_title">Disable hardware AEC.</string>
    <string name="pref_disable_built_in_aec_dlg">Disable hardware AEC.</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_built_in_aec_not_available">Hardware AEC is not available</string>
    <string name="pref_disable_built_in_agc_key">disable_built_in_agc_preference</string>
    <string name="pref_disable_built_in_agc_title">Disable hardware AGC.</string>
    <string name="pref_disable_built_in_agc_dlg">Disable hardware AGC.</string>
    <string name="pref_disable_built_in_agc_default">false</string>
    <string name="pref_built_in_agc_not_available">Hardware AGC is not available</string>
    <string name="pref_disable_built_in_ns_key">disable_built_in_ns_preference</string>
    <string name="pref_disable_built_in_ns_title">Disable hardware NS.</string>
    <string name="pref_disable_built_in_ns_dlg">Disable hardware NS.</string>
    <string name="pref_disable_built_in_ns_default">false</string>
</resources>