<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"


    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_4sdp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Voice note"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:fontFamily="@font/kia_signature_fix_bold"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnCloseVoice"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
           android:src="@drawable/cancel__1_" />
    </RelativeLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/line"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Record"
        android:fontFamily="@font/kia_signature_fix_regular"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/darawable_greyborder_darkgreyfilled"
        android:gravity="center_vertical"
        android:orientation="horizontal"
       >

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:padding="@dimen/_5sdp"
            android:background="@color/colorPrimary_kia_kandid"
            android:src="@drawable/mic__2_"
            android:contentDescription="@null" />






        <com.masoudss.lib.WaveformSeekBar
            android:id="@+id/waveformView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:visibility="visible"
            android:layout_marginStart="16dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/txtVoiceTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="00:00"
            android:fontFamily="@font/kia_signature_fix_regular"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/btnPlayPauseVoice"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:padding="@dimen/_5sdp"
            android:visibility="gone"
            android:layout_marginStart="16dp"
            android:src="@drawable/play_circle"
            />

        <ImageView
            android:id="@+id/btnDeleteVoice"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:padding="@dimen/_5sdp"
            android:visibility="gone"
            android:layout_marginStart="8dp"
            android:src="@drawable/delete"
            android:contentDescription="@null" />
    </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingTop="2dp">

        <!-- RECORD BUTTON -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRecordVoice"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/recording"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/colorPrimary_kia_kandid"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/kia_signature_fix_regular"
            android:layout_marginHorizontal="@dimen/_5sdp"/>

        <!-- ACTION BUTTON GROUP -->
        <LinearLayout
            android:id="@+id/actionButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:visibility="visible"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_5sdp">

            <!-- PAUSE -->
            <LinearLayout
                android:id="@+id/pauseIcon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal"
                android:background="@drawable/bg_main_color_btn">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/pause"
                    android:contentDescription="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pause"
                    android:maxLines="1"
                    android:layout_marginStart="6dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_kia_black"
                    android:fontFamily="@font/kia_signature_fix_bold"/>
            </LinearLayout>

            <!-- RESTART -->
            <LinearLayout
                android:id="@+id/restart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal"
                android:background="@drawable/bg_main_color_btn">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                  android:visibility="gone"
                    android:contentDescription="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restart"
                    android:maxLines="1"
                    android:layout_marginStart="6dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_kia_black"
                    android:fontFamily="@font/kia_signature_fix_bold"/>
            </LinearLayout>

            <!-- SEND -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveVoice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="Send"
                android:gravity="center"
                android:visibility="gone"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:background="@color/colorPrimary_kia_kandid"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/kia_signature_fix_regular"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>
